--- a/myMuseum/src/main/resources/application.properties
+++ b/myMuseum/src/main/resources/application.properties
@@ -21,7 +21,7 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/allAnswers
+spring.datasource.url=jdbc:postgresql://localhost/museo
 spring.datasource.username=postgres
 spring.datasource.password=RosaldoDB
 #==================================
