--- a/myMuseum/src/main/resources/messages/message.properties
+++ b/myMuseum/src/main/resources/messages/message.properties
@@ -1,28 +1,20 @@
 required.artista.nome=Name is a mandatory field
 required.artista.cognome=Surname is a mandatory field
-#duplicato=This product already exists
-#header.prodotto=Product details
-#header.prodotti=List of products
-#header.index=Welcome
-#title.prodotto=Product details
-#title.prodotti=List of products
-#title.formProduct=Insert product
-#pageTitle.product=Produce Page
-#index.login=Login
-#index.register=Sign in
-#header.registra=Signing in
-#header.menuUtente=User Menu
-#header.menuAdmin=Admin Menu
-##
-#required.user.nome=First name is a mandatory field
-#required.user.cognome=Last name is a mandatory field
-#required.credentials.username=Username is a mandatory field
-#required.credentials.password=Password is a mandatory field
-#size.user.nome=First name must be between 2 and 100 characters long
-#size.user.cognome=Last name must be between 2 and 100 characters long
-#size.credentials.username=Username must be between 4 and 20 characters long
-#size.credentials.password=Password must be between 6 and 20 characters long
-#duplicate.credentials.username=This username is already taken
+required.collezione.nome=Name is a mandatory field
+required.collezione.descrizione=Description is a mandatory field
+required.curatore.matricola=Serial number is a mandatory field
+duplicatoCuratore=This curatore already exists
+
+
+required.user.nome=First name is a mandatory field
+required.user.cognome=Last name is a mandatory field
+required.credentials.username=Username is a mandatory field
+required.credentials.password=Password is a mandatory field
+size.user.nome=First name must be between 2 and 100 characters long
+size.user.cognome=Last name must be between 2 and 100 characters long
+size.credentials.username=Username must be between 4 and 20 characters long
+size.credentials.password=Password must be between 6 and 20 characters long
+duplicate.credentials.username=This username is already taken
 
 
 
@@ -38,6 +30,15 @@ msgArtista.luogoMorte=Place of death:
 msgArtista.nazione=Nation:
 msgArtista.biografia=Bio:
 
+msgCuratore.matricola=Serial number:
+msgCuratore.nome=Name:
+msgCuratore.cognome=Surname:
+msgCuratore.dataNascita=Date of birth:
+msgCuratore.luogoNascita=Birthplace:
+msgCuratore.email=Email:
+msgCuratore.numeroTelefono=Telephone:
+
+
 header.opere=Artworks 
 header.curatore=Curatore
 header.artisti=Artists
@@ -47,6 +48,8 @@ header.areaAdmin=Admin
 header.artista=Artist
 header.collezione=Collection
 header.benvenuto=Welcome!
+header.curatori=Curatori
+header.newAdmin=Add new admin
 
 
 msgCollezione.nome=Name:
@@ -58,6 +61,7 @@ msgOpera.descrizione=Description:
 
 msgAdmin.home=Welcome admin! Choose a new action...
 msgAdmin.NewCollezione=New collection
+msgAdmin.NewCollezioneCuratore=Choose curatore
 msgAdmin.EliminaCollezione=Delete collection
 msgAdmin.NewArtista=New artist
 msgAdmin.EliminaArtista=Delete artist
