--- a/myMuseum/src/main/resources/messages/message.properties
+++ b/myMuseum/src/main/resources/messages/message.properties
@@ -58,6 +58,7 @@ msgCollezione.descrizione=Description:
 msgOpera.titolo=Title:
 msgOpera.anno=Year:
 msgOpera.descrizione=Description:
+msgOpera.immagine=Image:
 
 msgAdmin.home=Welcome admin! Choose a new action...
 msgAdmin.NewCollezione=New collection
@@ -70,5 +71,7 @@ msgAdmin.EliminaOpera=Delete artwork
 msgAdmin.NewCuratore=New curatore
 msgAdmin.EliminaCuratore=Delete curatore
 msgAdmin.VisualizzaCuratori=Visualize curatori
+msgAdmin.NewOperaCollezione=Choose the collection
+msgAdmin.NewOperaArtista=Choose the artist
 
 
