--- a/myMuseum/src/main/resources/application.properties
+++ b/myMuseum/src/main/resources/application.properties
@@ -31,3 +31,7 @@ server.port= 8080
 server.error.whitelabel.enabled=false 
 server.error.include-stacktrace=always
 
+
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
