--- a/myMuseum/src/main/resources/messages/message.properties
+++ b/myMuseum/src/main/resources/messages/message.properties
@@ -50,6 +50,20 @@ header.collezione=Collection
 header.benvenuto=Welcome!
 header.curatori=Curatori
 header.newAdmin=Add new admin
+header.presentazione=MyMuseum is one of the most important museums in Italy. Millions of people, every year, come from every corner of the world to admire the works present here in Vatican City. Within these walls are the works of important artists, known all over the world. In its rooms are the masterpieces of masters such as the inventor Leonardo Da Vinci, the gloomy Caravaggio and Michelangelo Buonarroti, the undisputed flag of the Italian Renaissance
+header.orarioTi=Opening hours
+header.orario=Mon-Fry 08:00-17:30
+header.comeArrivareTit=Getting here
+header.metro=Line A direction Battistini, Ottaviano or Cipro stations
+header.bus=49, stop in the square in front of MyMuseum
+header.tram=19, stop at Piazza del Risorgimento
+header.taxi=Taxi rank in the square in front of the Vatican Museums
+header.esplora=In the museum...
+
+
+
+
+
 
 
 msgCollezione.nome=Name:
