--- a/myMuseum/src/main/resources/application.properties
+++ b/myMuseum/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/museo
 spring.datasource.username=postgres
@@ -35,3 +35,4 @@ server.error.include-stacktrace=always
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.datasource.hikari.auto-commit=false                                                    
