--- a/myMuseum/src/main/resources/messages/message.properties
+++ b/myMuseum/src/main/resources/messages/message.properties
@@ -5,6 +5,9 @@ required.collezione.descrizione=Description is a mandatory field
 required.curatore.matricola=Serial number is a mandatory field
 duplicatoCuratore=This curatore already exists
 
+required.opera.titolo=Title is a mandatory field
+required.opera.descrizione=Description is a mandatory field
+required.opera.anno=Year is a mandatory field
 
 required.user.nome=First name is a mandatory field
 required.user.cognome=Last name is a mandatory field
